<resources>
    <string name="app_name">SearchForAirTickets</string>
    <string name="search_for_air_tickets">Search for air tickets:</string>
    <string name="departure_citie">Departure citie:</string>
    <string name="arrival_city">Arrival city:</string>
    <string name="departure_date">Departure date:</string>
    <string name="arrival_date">Arrival date:</string>
    <string name="passengers">Passengers:</string>
    <string name="adult_passengers">Adult passengers:</string>
    <string name="adult">Adult</string>
    <string name="children_passengers">Children passengers:</string>
    <string name="children">Children</string>
    <string name="babies_passengers">Babies passengers:</string>
    <string name="babies">Babies</string>
    <string name="buttonSearch">Search</string>

    <string-array name="city_array">
        <item>Москва</item>
        <item>Иркутск</item>
        <item>Питер</item>
        <item>Красноярск</item>
        <item>Япония</item>
    </string-array>
</resources>