<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-104dp">


    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_for_air_tickets"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/textDepartureCitie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/departure_citie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.283"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        app:layout_constraintVertical_bias="0.092" />

    <Spinner
        android:id="@+id/spinnerDepartureCitie"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/textDepartureCitie"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        app:layout_constraintVertical_bias="0.085" />

    <TextView
        android:id="@+id/textArrivalCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/arrival_city"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.342"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDepartureCitie"
        app:layout_constraintVertical_bias="0.001" />

    <Spinner
        android:id="@+id/spinnerArrivalCity"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/textArrivalCity"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDepartureCitie"
        app:layout_constraintVertical_bias="0.041" />

    <TextView
        android:id="@+id/textDepartureDate"
        android:layout_width="110dp"
        android:layout_height="25dp"
        android:layout_marginTop="32dp"
        android:text="@string/departure_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.252"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textArrivalCity"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/DepartureDate"
        android:layout_width="165dp"
        android:layout_height="40dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.316"
        app:layout_constraintStart_toEndOf="@+id/textDepartureDate"
        app:layout_constraintTop_toBottomOf="@+id/spinnerArrivalCity"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/textArrivalDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrival_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDepartureDate"
        app:layout_constraintVertical_bias="0.073" />

    <EditText
        android:id="@+id/ArrivalDate"
        android:layout_width="165dp"
        android:layout_height="40dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.316"
        app:layout_constraintStart_toEndOf="@+id/textDepartureDate"
        app:layout_constraintTop_toBottomOf="@+id/DepartureDate"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/textPassengers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passengers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textArrivalDate"
        app:layout_constraintVertical_bias="0.172" />

    <TextView
        android:id="@+id/textAdultPassengers3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adult_passengers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPassengers"
        app:layout_constraintVertical_bias="0.122" />


    <EditText
        android:id="@+id/adultPassengers"
        android:layout_width="80dp"
        android:layout_height="43dp"
        android:layout_weight="1"
        android:hint="@string/adult"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toEndOf="@+id/textAdultPassengers3"
        app:layout_constraintTop_toBottomOf="@+id/textPassengers"
        app:layout_constraintVertical_bias="0.093" />

    <TextView
        android:id="@+id/textChildrenPassengers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/children_passengers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAdultPassengers3"
        app:layout_constraintVertical_bias="0.117" />

    <EditText
        android:id="@+id/childrenPassengers"
        android:layout_width="80dp"
        android:layout_height="43dp"
        android:layout_weight="1"
        android:hint="@string/children"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toEndOf="@+id/textChildrenPassengers"
        app:layout_constraintTop_toBottomOf="@+id/adultPassengers"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/textBabiesPassengers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/babies_passengers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textChildrenPassengers"
        app:layout_constraintVertical_bias="0.153" />

    <EditText
        android:id="@+id/babiesPassengers"
        android:layout_width="80dp"
        android:layout_height="43dp"
        android:layout_weight="1"
        android:hint="@string/babies"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toEndOf="@+id/textBabiesPassengers"
        app:layout_constraintTop_toBottomOf="@+id/childrenPassengers"
        app:layout_constraintVertical_bias="0.054" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSearch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBabiesPassengers" />


</androidx.constraintlayout.widget.ConstraintLayout>